# django-saas-boilerplate

./: .dockerignore  .gitignore  Dockerfile  entrypoint.sh  pyproject.toml
core/: urls.py
